[package]
name = "trojan-x"
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
authors = ["Irohaede <irohaede@proton.me>"]

[dependencies]
tokio = { version = "1.20.0", features = ["macros", "net", "signal", "io-util", "rt-multi-thread"] }
tokio-rustls = { version = "0.23", default-features = false, features = ["tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", default-features = false }
simple_logger = { version = "2.2", default-features = false, features = ["timestamps"] }
log = { version = "0.4", features = ["serde", "release_max_level_debug"] }
rustls-pemfile = "1.0.0"
reqwest = { version = "0.11.11", default-features = false, features =  ["json", "rustls-tls-native-roots"] }
form_urlencoded = "1.0"
libc = "0.2"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
incremental = false

[[bin]]
name = "trojan-sspanel"
path = "bin/trojan-sspanel.rs"
