[package]
name = "trojan-x"
version = "0.0.3"
edition = "2021"
license = "MPL-2.0"
authors = ["Irohaede <irohaede@proton.me>"]

[dependencies]
bytes = "1.3"
tokio = { version = "1.23", features = ["macros", "net", "io-util", "sync", "rt"] }
tokio-rustls = { version = "0.23", default-features = false, features = ["tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", default-features = false }
simple_logger = { version = "4.0", default-features = false, features = ["timestamps"] }
log = { version = "0.4", features = ["serde", "release_max_level_debug"] }
rustls-pemfile = "1.0"

# optional
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"], optional = true }
form_urlencoded = { version = "1.1", optional = true }
rustls-native-certs = { version = "0.6", optional =  true }

[target.'cfg(any(target_os = "linux"))'.dependencies]
libc = { version = "0.2", optional = true }

[features]
trojan = [
    "rustls-native-certs"
]
sspanel = [
    "libc",
    "reqwest",
    "form_urlencoded",
    "tokio/time",
    "tokio/signal",
    "tokio/rt-multi-thread"
]

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
incremental = false

[[bin]]
name = "trojan-sspanel"
path = "bin/trojan-sspanel.rs"
required-features = ["sspanel"]
